[package]
name = "rsapi_http"
version = "0.5.0-rc.1"
authors = ["Arian Ebrahimi <ribrea@icloud.com>"]
description = """
Types, traits, and parsers for HTTP requests, responses, and headers.
"""
keywords = ["web", "framework", "http"]
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
json = "0.11.13"
futures = "0.3"
mime = "0.3.16"
